@@ -1,16 +1,36 @@
 package com.retail.service.impl;
 
+import com.retail.common.exception.BusinessRuleViolationException;
+import com.retail.common.exception.InvalidStateTransitionException;
+import com.retail.common.exception.ResourceNotFoundException;
+import com.retail.common.stub.*;
+import com.retail.entity.Branch;
+import com.retail.entity.Employee;
+import com.retail.entity.RoleCode;
+import com.retail.entity.Invoice;
+import com.retail.entity.InvoiceDetail;
+import com.retail.repository.InvoiceRepository;
+import com.retail.dto.*;
+import com.retail.dto.RefundResponse;
 import com.retail.entity.*;
-import com.retail.exception.ValidationException;
+import com.retail.mapper.RefundMapper;
 import com.retail.repository.RefundDetailRepository;
 import com.retail.repository.RefundRepository;
-import com.retail.repository.InvoiceRepository;
+// RefundSpecification removed — replaced by @Query JPQL in RefundRepository
 import com.retail.service.RefundService;
-import com.retail.service.InventoryTransactionService;
-import com.retail.service.AuditLogService;
-
+import com.retail.validator.RefundValidator;
+import com.retail.repository.BranchRepository;
+import com.retail.repository.EmployeeRepository;
 import jakarta.persistence.EntityManager;
+import jakarta.persistence.LockModeType;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.*;
+// Specification API removed (HSF302: không có bài demo trong slide Chapter04)
+import org.springframework.security.access.AccessDeniedException;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -18,210 +38,341 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
+/**
+ * Refund business logic.
+ *
+ * INVENTORY CONVENTION (Section 3.2.3, Damaged item):
+ *   Damaged → QtyOnHand += Quantity (physically back in store),
+ *             QtyAvailable unchanged (cannot resell damaged goods).
+ *   Module Disposal (thành viên 5) will process write-off later.
+ *   ITH record written with TransactionType='Refund_Restock', QuantityChange=0,
+ *   Reason='Damaged - not restocked (pending Disposal module)'.
+ *
+ * Integration notes (post-merge):
+ *   - Employee, Branch → use com.retail.entity + com.retail.repository (real entities)
+ *   - Product, BranchInventory, ITH → still use Stubs (other team members)
+ */
 @Service
 @RequiredArgsConstructor
+@Slf4j
+@Transactional(readOnly = true)
 public class RefundServiceImpl implements RefundService {
+
+    private static final BigDecimal APPROVAL_THRESHOLD = new BigDecimal("200000");
 
     private final RefundRepository refundRepository;
     private final RefundDetailRepository refundDetailRepository;
+    private final RefundMapper refundMapper;
+    private final RefundValidator refundValidator;
     private final InvoiceRepository invoiceRepository;
-    private final InventoryTransactionService transactionService;
-    private final AuditLogService auditLogService;
     private final EntityManager entityManager;
+    private final PasswordEncoder passwordEncoder;
+
+    // ── Real repositories ─────────────────────────────────────────────────────
+    private final EmployeeRepository employeeRepository;
+    private final BranchRepository branchRepository;
+
+    // ── Stub repositories (replace at full team merge) ────────────────────────
+    private final com.retail.repository.ProductRepository productRepo;
+    private final com.retail.repository.BranchInventoryRepository inventoryRepo;
+    private final com.retail.repository.InventoryTransactionHistoryRepository ithRepo;
+
+    // ─────────────────────────────────────────────────────────────────────────
+    // 3.2.1 — Create Refund
+    // ─────────────────────────────────────────────────────────────────────────
 
     @Override
     @Transactional
-    public Refund createRefund(Long originalInvoiceId, String customerName, String customerPhone, String reason, Long cashierId) {
-        Invoice invoice = invoiceRepository.findById(originalInvoiceId)
-                .orElseThrow(() -> new ValidationException("Hóa đơn gốc không tồn tại"));
+    public RefundResponse createRefund(CreateRefundRequest request) {
+        Invoice invoice = invoiceRepository.findByIdWithDetails(request.originalInvoiceId())
+                .orElseThrow(() -> new ResourceNotFoundException("Invoice", request.originalInvoiceId()));
 
-        if (!"Paid".equals(invoice.getStatus())) {
-            throw new ValidationException("Chỉ được đổi trả sản phẩm từ hóa đơn đã thanh toán (Paid)");
-        }
+        Employee requestedBy = resolveCurrentEmployee();
 
-        // Kiểm tra thời hạn 7 ngày
-        LocalDateTime now = LocalDateTime.now();
-        if (invoice.getPaidAt() == null || now.isAfter(invoice.getPaidAt().plusDays(7))) {
-            throw new ValidationException("Đã quá thời hạn đổi trả 7 ngày cho hóa đơn này (Ngày thanh toán: " + invoice.getPaidAt() + ")");
-        }
+        refundValidator.validate(request, invoice, requestedBy.getBranch().getBranchId());
 
-        Branch branch = invoice.getBranch();
+        Branch branch = branchRepository.findById(invoice.getBranchId())
+                .orElseThrow(() -> new ResourceNotFoundException("Branch", invoice.getBranchId()));
 
-        // Generate RefundCode: REF-[BranchCode]-YYYYMMDD-[4 số]
-        LocalDate today = LocalDate.now();
-        String dateStr = today.format(DateTimeFormatter.ofPattern("yyyyMMdd"));
-        String prefix = "REF-" + branch.getBranchCode() + "-" + dateStr + "-";
+        Map<Long, InvoiceDetail> soldMap = invoice.getDetails().stream()
+                .collect(Collectors.toMap(InvoiceDetail::getProductId, d -> d));
 
-        String maxCode = refundRepository.findMaxRefundCodeByBranchAndDate(branch.getBranchCode(), dateStr);
-        int nextSeq = 1;
-        if (maxCode != null && maxCode.startsWith(prefix) && maxCode.length() == prefix.length() + 4) {
-            try {
-                String seqStr = maxCode.substring(prefix.length());
-                nextSeq = Integer.parseInt(seqStr) + 1;
-            } catch (NumberFormatException ignored) {}
-        }
-        String refundCode = prefix + String.format("%04d", nextSeq);
+        List<RefundDetail> details = request.items().stream().map(item -> {
+            InvoiceDetail soldDetail = soldMap.get(item.productId());
+            return RefundDetail.builder()
+                    .productId(item.productId())
+                    .quantity(item.quantity())
+                    .conditionType(item.conditionType())
+                    .unitRefundAmount(soldDetail.getUnitPrice())
+                    .build();
+        }).collect(Collectors.toList());
+
+        BigDecimal total = details.stream()
+                .map(d -> d.getUnitRefundAmount().multiply(d.getQuantity()))
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        // Rule #8: >= 200,000 VND → Pending_Approval; else Draft
+        RefundStatus initialStatus = total.compareTo(APPROVAL_THRESHOLD) >= 0
+                ? RefundStatus.Pending_Approval
+                : RefundStatus.Draft;
+
+        String refundCode = generateRefundCode(branch, LocalDate.now());
 
         Refund refund = Refund.builder()
                 .refundCode(refundCode)
-                .originalInvoice(invoice)
-                .branch(branch)
-                .customerName(customerName.trim())
-                .customerPhone(customerPhone.trim())
-                .reason(reason.trim())
-                .totalRefundAmount(BigDecimal.ZERO)
-                .status("Draft")
-                .requestedBy(entityManager.getReference(Employee.class, cashierId))
+                .originalInvoiceId(invoice.getInvoiceId())
+                .branchId(invoice.getBranchId())  // Rule #6: copy from invoice, not client
+                .customerName(request.customerName())
+                .customerPhone(request.customerPhone())
+                .reason(request.reason())
+                .totalRefundAmount(total)
+                .status(initialStatus)
+                .requestedBy(requestedBy.getEmployeeId())
                 .build();
 
+        details.forEach(refund::addDetail);
         Refund saved = refundRepository.save(refund);
-        auditLogService.logAction(cashierId, "CreateRefund", "Refund",
-                saved.getRefundId(), null, "Draft", "Tạo phiếu đổi trả nháp", null, null);
-        return saved;
-    }
 
-    @Override
-    @Transactional
-    public Refund addDetail(Long refundId, Long productId, BigDecimal quantity, String conditionType) {
-        Refund refund = refundRepository.findById(refundId)
-                .orElseThrow(() -> new ValidationException("Phiếu đổi trả không tồn tại"));
-
-        if (!"Draft".equals(refund.getStatus())) {
-            throw new ValidationException("Chỉ được chỉnh sửa phiếu đổi trả ở trạng thái Draft");
-        }
-
-        if (quantity == null || quantity.compareTo(BigDecimal.ZERO) <= 0) {
-            throw new ValidationException("Số lượng đổi trả phải lớn hơn 0");
-        }
-
-        if (!"Damaged".equals(conditionType) && !"Resalable".equals(conditionType)) {
-            throw new ValidationException("Trạng thái sản phẩm đổi trả không hợp lệ (Damaged | Resalable)");
-        }
-
-        Product product = entityManager.find(Product.class, productId);
-        if (product == null) {
-            throw new ValidationException("Sản phẩm không tồn tại");
-        }
-
-        // Tìm sản phẩm trong hóa đơn gốc
-        InvoiceDetail origDetail = refund.getOriginalInvoice().getDetails().stream()
-                .filter(d -> d.getProduct().getProductId().equals(productId))
-                .findFirst()
-                .orElseThrow(() -> new ValidationException("Sản phẩm '" + product.getProductName() + "' không tồn tại trong hóa đơn gốc"));
-
-        // Kiểm tra số lượng đổi trả lũy kế
-        BigDecimal alreadyRefunded = refundDetailRepository.sumRefundedQtyForProduct(refund.getOriginalInvoice().getInvoiceId(), productId);
-        BigDecimal totalRequested = alreadyRefunded.add(quantity);
-
-        if (totalRequested.compareTo(origDetail.getQuantity()) > 0) {
-            throw new ValidationException("Tổng số lượng đổi trả lũy kế (" + totalRequested + ") vượt quá số lượng mua ban đầu (" + origDetail.getQuantity() + ") cho sản phẩm: " + product.getProductName());
-        }
-
-        RefundDetail detail = RefundDetail.builder()
-                .refund(refund)
-                .product(product)
-                .quantity(quantity)
-                .conditionType(conditionType)
-                .unitRefundAmount(origDetail.getUnitPrice())
-                .build();
-
-        refund.addDetail(detail);
-
-        // Tính lại tổng tiền hoàn trả
-        BigDecimal lineRefund = quantity.multiply(origDetail.getUnitPrice());
-        BigDecimal currentTotal = refund.getTotalRefundAmount() != null ? refund.getTotalRefundAmount() : BigDecimal.ZERO;
-        refund.setTotalRefundAmount(currentTotal.add(lineRefund));
-
-        // Tự động chuyển trạng thái chờ duyệt nếu số tiền >= 200,000 VNĐ
-        if (refund.getTotalRefundAmount().compareTo(new BigDecimal("200000.00")) >= 0) {
-            refund.setStatus("Pending_Approval");
+        if (initialStatus == RefundStatus.Draft) {
+            // Auto-approve if under threshold (BUG-08)
+            completeRefund(saved, false);
+            saved = refundRepository.save(saved);
+            log.info("Auto-approved Refund {} (under threshold) for invoice {}",
+                    refundCode, invoice.getInvoiceCode());
         } else {
-            refund.setStatus("Draft");
+            log.info("Created Refund {} (status={}) for invoice {}",
+                    refundCode, initialStatus, invoice.getInvoiceCode());
         }
 
-        return refundRepository.save(refund);
+        return buildFullResponse(saved, invoice);
     }
+
+    // ─────────────────────────────────────────────────────────────────────────
+    // 3.2.2 — Approve (MANAGER/ADMIN)
+    // ─────────────────────────────────────────────────────────────────────────
 
     @Override
     @Transactional
-    public Refund approveRefund(Long refundId, Long managerEmployeeId, String managerPinOverride) {
-        Refund refund = refundRepository.findById(refundId)
-                .orElseThrow(() -> new ValidationException("Phiếu đổi trả không tồn tại"));
+    public RefundResponse approveRefund(Long refundId) {
+        Refund refund = loadRefundWithDetails(refundId);
+        completeRefund(refund, false);
+        Invoice invoice = invoiceRepository.findById(refund.getOriginalInvoiceId()).orElse(null);
+        return buildFullResponse(refundRepository.save(refund), invoice);
+    }
 
-        BigDecimal limit = new BigDecimal("200000.00");
-        boolean requiresApproval = refund.getTotalRefundAmount().compareTo(limit) >= 0;
+    // ─────────────────────────────────────────────────────────────────────────
+    // 3.2.2 — Reject (MANAGER/ADMIN)
+    // ─────────────────────────────────────────────────────────────────────────
 
-        if (requiresApproval) {
-            if (managerEmployeeId == null || managerPinOverride == null || managerPinOverride.trim().isEmpty()) {
-                throw new ValidationException("Số tiền hoàn trả từ 200,000 VNĐ trở lên yêu cầu Quản lý nhập mã PIN phê duyệt trực tiếp.");
-            }
+    @Override
+    @Transactional
+    public RefundResponse rejectRefund(Long refundId, String rejectionReason) {
+        Refund refund = loadRefundWithDetails(refundId);
+        if (!refund.getStatus().canTransitionTo(RefundStatus.Rejected)) {
+            throw new InvalidStateTransitionException("Refund", refund.getStatus().name(), "Rejected");
+        }
+        refund.setStatus(RefundStatus.Rejected);
+        if (rejectionReason != null && !rejectionReason.isBlank()) {
+            refund.setReason(refund.getReason() + " [REJECTED: " + rejectionReason + "]");
+        }
+        refund.setApprovedBy(resolveCurrentEmployee().getEmployeeId());
+        Invoice invoice = invoiceRepository.findById(refund.getOriginalInvoiceId()).orElse(null);
+        return buildFullResponse(refundRepository.save(refund), invoice);
+    }
 
-            Employee manager = entityManager.find(Employee.class, managerEmployeeId);
-            if (manager == null || !"MANAGER".equals(manager.getRole().getRoleCode().name())) {
-                throw new ValidationException("Nhân viên phê duyệt không phải là Quản lý chi nhánh");
-            }
+    // ─────────────────────────────────────────────────────────────────────────
+    // 3.2.2 — Manager PIN Override at POS
+    // ─────────────────────────────────────────────────────────────────────────
 
-            if (manager.getPinCode() == null || !manager.getPinCode().equals(managerPinOverride.trim())) {
-                throw new ValidationException("Mã PIN phê duyệt của Quản lý không chính xác");
-            }
+    @Override
+    @Transactional
+    public RefundResponse overrideApprove(Long refundId, RefundOverrideApproveRequest request) {
+        Employee manager = employeeRepository.findByUsername(request.managerUsername())
+                .orElseThrow(() -> new ResourceNotFoundException("Manager: " + request.managerUsername()));
 
-            refund.setApprovedBy(manager);
-            refund.setPinOverrideUsed(true);
+        // Verify MANAGER or ADMIN role
+        RoleCode roleCode = manager.getRole().getRoleCode();
+        if (roleCode != RoleCode.MANAGER && roleCode != RoleCode.ADMIN) {
+            throw new AccessDeniedException("User '" + request.managerUsername() + "' is not a Manager or Admin");
         }
 
-        Integer branchId = refund.getBranch().getBranchId();
+        // Authenticate PIN against BCrypt password (no separate PIN table)
+        if (!passwordEncoder.matches(request.managerPin(), manager.getPasswordHash())) {
+            throw new BusinessRuleViolationException("INVALID_PIN",
+                    "Manager PIN authentication failed");
+        }
 
-        // Hoàn trả kho bãi tương ứng cho từng sản phẩm
+        Refund refund = loadRefundWithDetails(refundId);
+        refund.setPinOverrideUsed(true);
+        refund.setApprovedBy(manager.getEmployeeId());
+        completeRefund(refund, true);
+
+        Invoice invoice = invoiceRepository.findById(refund.getOriginalInvoiceId()).orElse(null);
+        log.info("Manager {} PIN-overrode approval for Refund {}", request.managerUsername(), refund.getRefundCode());
+        return buildFullResponse(refundRepository.save(refund), invoice);
+    }
+
+    // ─────────────────────────────────────────────────────────────────────────
+    // 3.2.4 — List & Detail
+    // ─────────────────────────────────────────────────────────────────────────
+
+    @Override
+    public Page<RefundResponse> listRefunds(RefundSearchRequest request) {
+        Integer branchIdFilter;
+        if (hasRole("ADMIN")) {
+            branchIdFilter = null;
+        } else {
+            branchIdFilter = resolveCurrentEmployee().getBranch().getBranchId();
+        }
+
+        // HSF302 Mục 3: dùng @Query JPQL (findByFilters) thay Specification API
+        LocalDateTime fromDateTime = request.fromDate() != null ? request.fromDate().atStartOfDay() : null;
+        LocalDateTime toDateTime = request.toDate() != null ? request.toDate().plusDays(1).atStartOfDay() : null;
+
+        Pageable pageable = PageRequest.of(request.page(), request.size(),
+                Sort.by(Sort.Direction.DESC, "createdAt"));
+
+        Page<Refund> page = refundRepository.findByFilters(
+                request.status() != null ? List.of(request.status()) : Arrays.asList(RefundStatus.values()),
+                fromDateTime, toDateTime, branchIdFilter, pageable);
+
+        // Batch load invoices
+        Set<Long> invoiceIds = page.map(Refund::getOriginalInvoiceId).toSet();
+        Map<Long, Invoice> invoiceMap = invoiceRepository.findAllById(invoiceIds).stream()
+                .collect(Collectors.toMap(Invoice::getInvoiceId, i -> i));
+
+        // Batch load employee names
+        Set<Long> empIds = new HashSet<>();
+        page.forEach(r -> {
+            empIds.add(r.getRequestedBy());
+            if (r.getApprovedBy() != null) empIds.add(r.getApprovedBy());
+        });
+        Map<Long, String> empNames = employeeRepository.findAllById(empIds).stream()
+                .collect(Collectors.toMap(Employee::getEmployeeId, Employee::getFullName));
+
+        return page.map(r -> refundMapper.toSummaryResponse(
+                r,
+                invoiceMap.get(r.getOriginalInvoiceId()) != null
+                        ? invoiceMap.get(r.getOriginalInvoiceId()).getInvoiceCode() : null,
+                empNames.get(r.getRequestedBy()),
+                r.getApprovedBy() != null ? empNames.get(r.getApprovedBy()) : null));
+    }
+
+    @Override
+    public RefundResponse getRefundDetail(Long refundId) {
+        Refund refund = loadRefundWithDetails(refundId);
+        Invoice invoice = invoiceRepository.findById(refund.getOriginalInvoiceId()).orElse(null);
+        return buildFullResponse(refund, invoice);
+    }
+
+    // ─────────────────────────────────────────────────────────────────────────
+    // Private helpers
+    // ─────────────────────────────────────────────────────────────────────────
+
+    private void completeRefund(Refund refund, boolean pinOverride) {
+        if (!refund.getStatus().canTransitionTo(RefundStatus.Completed)) {
+            throw new InvalidStateTransitionException("Refund", refund.getStatus().name(), "Completed");
+        }
+        refund.setStatus(RefundStatus.Completed);
+        LocalDateTime now = LocalDateTime.now();
+        refund.setApprovedAt(now);
+        if (!pinOverride) {
+            refund.setApprovedBy(resolveCurrentEmployee().getEmployeeId());
+        }
+
         for (RefundDetail detail : refund.getDetails()) {
-            Long productId = detail.getProduct().getProductId();
-            BigDecimal qty = detail.getQuantity();
+            BranchInventoryId invKey = new BranchInventoryId(refund.getBranchId(), detail.getProductId());
+            BranchInventory inventory = entityManager.find(
+                    BranchInventory.class, invKey, LockModeType.PESSIMISTIC_WRITE);
 
-            if ("Resalable".equals(detail.getConditionType())) {
-                // Hàng nguyên vẹn: cộng lại kho khả dụng bán hàng và kho vật lý
-                transactionService.recordTransaction(
-                        branchId, productId,
-                        qty, qty, BigDecimal.ZERO,
-                        InventoryTransactionType.Refund_Restock,
-                        "Refund", refundId,
-                        "Đổi trả hoàn kho (nguyên vẹn): " + refund.getRefundCode(),
-                        refund.getRequestedBy().getEmployeeId()
-                );
-            } else if ("Damaged".equals(detail.getConditionType())) {
-                // Hàng lỗi/hỏng: cộng kho vật lý (chờ thanh lý), không cộng kho khả dụng
-                transactionService.recordTransaction(
-                        branchId, productId,
-                        qty, BigDecimal.ZERO, BigDecimal.ZERO,
-                        InventoryTransactionType.Refund_Restock,
-                        "Refund", refundId,
-                        "Đổi trả hoàn kho (lỗi/chờ hủy): " + refund.getRefundCode(),
-                        refund.getRequestedBy().getEmployeeId()
-                );
+            if (inventory == null) {
+                log.warn("No inventory record for branchId={} productId={} — skipping",
+                         refund.getBranchId(), detail.getProductId());
+                continue;
+            }
+
+            if (detail.getConditionType() == ConditionType.Resalable) {
+                inventory.setQtyAvailable(inventory.getQtyAvailable().add(detail.getQuantity()));
+                inventory.setQtyOnHand(inventory.getQtyOnHand().add(detail.getQuantity()));
+                inventory.setUpdatedAt(now);
+                writeIthRecord(refund, detail, detail.getQuantity(), now,
+                        InventoryTransactionType.Refund_Restock, "Refund approved - Resalable");
+            } else {
+                // Damaged: cộng QtyOnHand, module Disposal xử lý xuất hủy
+                inventory.setQtyOnHand(inventory.getQtyOnHand().add(detail.getQuantity()));
+                inventory.setUpdatedAt(now);
+                writeIthRecord(refund, detail, BigDecimal.ZERO, now,
+                        InventoryTransactionType.Refund_Restock, "Damaged - not restocked (pending Disposal module)");
             }
         }
-
-        refund.setStatus("Completed");
-        refund.setApprovedAt(LocalDateTime.now());
-        Refund saved = refundRepository.save(refund);
-
-        auditLogService.logAction(refund.getRequestedBy().getEmployeeId(), "ApproveRefund", "Refund",
-                saved.getRefundId(), "Pending_Approval", "Completed", "Hoàn tất phiếu đổi trả hoàn tiền", null, null);
-        return saved;
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public Refund getDetail(Long refundId) {
-        return refundRepository.findById(refundId)
-                .orElseThrow(() -> new ValidationException("Phiếu đổi trả không tồn tại"));
+    private void writeIthRecord(Refund refund, RefundDetail detail,
+                                 BigDecimal qtyChange, LocalDateTime now,
+                                 InventoryTransactionType txType, String reason) {
+        InventoryTransactionHistory ith = InventoryTransactionHistory.builder()
+                .branch(branchRepository.findById(refund.getBranchId()).orElse(null))
+                .product(productRepo.findById(detail.getProductId()).orElse(null))
+                .transactionType(txType)
+                .referenceTable("Refund")
+                .referenceId(refund.getRefundId())
+                .quantityChange(qtyChange)
+                .reason(reason)
+                .createdBy(employeeRepository.findById(refund.getApprovedBy() != null ? refund.getApprovedBy() : refund.getRequestedBy()).orElse(null))
+                .createdAt(now)
+                .build();
+        ithRepo.save(ith);
     }
 
-    @Override
-    @Transactional(readOnly = true)
-    public List<Refund> getRefundsByBranch(Integer branchId) {
-        return refundRepository.findAll().stream()
-                .filter(r -> r.getBranch().getBranchId().equals(branchId))
-                .toList();
+    private String generateRefundCode(Branch branch, LocalDate date) {
+        LocalDateTime start = date.atStartOfDay();
+        LocalDateTime end = date.plusDays(1).atStartOfDay();
+        long count = refundRepository.countByBranchIdAndCreatedAtBetween(branch.getBranchId(), start, end);
+        String seq = String.format("%04d", count + 1);
+        String dateStr = date.format(DateTimeFormatter.BASIC_ISO_DATE);
+        return String.format("REF-%s-%s-%s", branch.getBranchCode(), dateStr, seq);
+    }
+
+    private Refund loadRefundWithDetails(Long refundId) {
+        return refundRepository.findByIdWithDetails(refundId)
+                .orElseThrow(() -> new ResourceNotFoundException("Refund", refundId));
+    }
+
+    private RefundResponse buildFullResponse(Refund refund, Invoice invoice) {
+        Set<Long> productIds = refund.getDetails().stream()
+                .map(RefundDetail::getProductId).collect(Collectors.toSet());
+        Map<Long, Product> productMap = productRepo.findAllById(productIds).stream()
+                .collect(Collectors.toMap(Product::getProductId, p -> p));
+
+        Set<Long> empIds = new HashSet<>();
+        empIds.add(refund.getRequestedBy());
+        if (refund.getApprovedBy() != null) empIds.add(refund.getApprovedBy());
+        Map<Long, String> empNames = employeeRepository.findAllById(empIds).stream()
+                .collect(Collectors.toMap(Employee::getEmployeeId, Employee::getFullName));
+
+        return refundMapper.toResponse(
+                refund,
+                invoice != null ? invoice.getInvoiceCode() : null,
+                productMap,
+                empNames.get(refund.getRequestedBy()),
+                refund.getApprovedBy() != null ? empNames.get(refund.getApprovedBy()) : null);
+    }
+
+    private Employee resolveCurrentEmployee() {
+        String username = SecurityContextHolder.getContext().getAuthentication().getName();
+        return employeeRepository.findByUsername(username)
+                .orElseThrow(() -> new ResourceNotFoundException("Employee (current user): " + username));
+    }
+
+    private boolean hasRole(String role) {
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        return auth != null && auth.getAuthorities().stream()
+                .anyMatch(a -> a.getAuthority().equals("ROLE_" + role));
     }
 }
+
+
+
